# dreamdojo-aegis-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/: index.html
demo/css/: styles.css
demo/js/: dashboard.js  guards.js  robot.js
docs/: SECURITY_ANALYSIS.md
examples/: full_pipeline.rs  validate_action.rs
src/: action_guard.rs  chain_guard.rs  guidance_guard.rs  input_guard.rs  latent_guard.rs  lib.rs  pipeline.rs  traits.rs  types.rs
tests/: basic_tests.rs
