[package]
name = "aegis-dreamdojo-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AEGIS DreamDojo Guard SDK — Safety validation for embodied AI world models"
repository = "https://github.com/yatav/aegis-dreamdojo-sdk"
keywords = ["robotics", "safety", "world-model", "guardrail", "embodied-ai"]
categories = ["science::robotics", "algorithms"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# No extra dev deps needed

[[example]]
name = "validate_action"
path = "examples/validate_action.rs"

[[example]]
name = "full_pipeline"
path = "examples/full_pipeline.rs"

[workspace]
